--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,14 @@ repositories {
   jcenter()
 }
 
+jar {
+   manifest {
+      attributes(
+         'Main-Class': 'com.philhanna.flashcards.ui.Main'
+      )
+   }
+}
+
 dependencies {
   testImplementation 'junit:junit:4.12'
 }
