Added gradle nature to eclipse in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ repositories {
   jcenter()
 }
 
+eclipse {
+  project.natures 'org.eclipse.buildship.core.gradleprojectnature'
+}
+
 jar {
    manifest {
       attributes(
